Scan bytecode E2E test complete